# BudgetWise

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_notification_tables.py  002_add_provider_to_plaid_items.py  003_add_debt_investment_fields.py  004_add_is_fixed_to_categories.py  005_add_user_plan_and_onboarding.py  006_transfer_rule_match_type.py  007_transfer_rule_match_all.py  008_community_rules.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/middleware/: rate_limit.py  security_headers.py
backend/app/ml/: categorizer.py
backend/app/models/: __init__.py  account.py  budget.py  categorization_rule.py  category.py  category_merge_history.py  category_snapshot.py  community_correction.py  community_promotion.py  extension_token.py  goal.py  goal_contribution.py  import_job.py  notification_log.py  notification_preference.py  plaid_item.py  transaction.py  transfer_rule.py  user.py
backend/app/routers/: accounts.py  ai_assistant.py  ai_categorization.py  auth.py  budgets.py  categories.py  categorization.py  dev.py  extension.py  goals.py  import_.py  notifications.py  onboarding.py  plaid.py  projections.py  reports.py  snapshots.py  teller.py  transactions.py  transfer_rules.py
backend/app/schemas/: account.py  ai_assistant.py  ai_categorization.py  budget.py  categorization_rule.py  category.py  category_snapshot.py  extension.py  goal.py  import_job.py  notification.py  onboarding.py  user.py  (+6 more)
backend/tests/: conftest.py  test_auth.py  test_budgets.py  test_categories.py  test_categorization.py  test_extension.py  test_goals.py  test_import.py  test_notifications.py  test_plaid.py  test_production.py  test_reports.py  test_teller.py  test_transactions.py
(+260 files in other folders)
